2010-02-25  Noel O'Boyle

	* src/xml/cmlformat.cpp: Add support for 0D tetrahedral stereochem

2010-02-23  Noel O'Boyle

	* src/builder.cpp: Fix bug where a sp2-hybridised atom could be added
	at 180 deg instead of 120 if a particular corner case arose. The test
	case was "c1c2c(=O)[nH]c(=O)c2c(c2c1c(=O)[nH]c2=O)C#CC=C" where the
	final C=C was added in line with the C#C.

2010-02-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gaussformat.cpp: Add support for reading multiple
	conformers (e.g., geometry optimization) including energy for each step.

2010-02-22  Noel O'Boyle

	Enable testing of OpenBabel executables from Python
	* test/testbabel.py: Initial checkin of tests for the Babel executable
	* test/CMakeLists.txt: Add testbabel.py
	* cmake/modules/UsePythonTest.cmake: Add a CMake module for adding
	Python tests (BSD License) from Mathieu Malaterre

2010-02-21  Tim Vandermeersch

        * src/stereo/perception.cpp: Allow S, P and bridgehead N atoms to be 
        chiral. These "filters" may still need some work though.

        * test/files/nci.smi: Make N atom non-chiral in 2 smiles. The 
        smilesmatch unittest now passes.

2010-02-21  Noel O'Boyle

	* src/formats/gausscubeformat.cpp: Revert of change made in r3534. It
	just changed the warning to a different warning.

2010-02-21  Noel O'Boyle

	* src/CMakeLists.txt: Add LIBXML2 as a dependency of the XML formats

2010-02-20  Noel O'Boyle

	* src/CMakeLists.txt: Remove LIBXML2 as a dependency of the openbabel
	DLL

2010-02-20  Noel O'Boyle

	* include/openbabel/obmolecformat.h: Error compiling on some platforms
	due to extra qualification on member name

2010-02-19  Chris Morley

	* Changed the parameters of Do() in OBOp to include an OBConversion
	object and so allow a wider range of operations. A change in the
	order of parameters means that it is not code compatible. But all
	except the first have defaults and most, if not all, public ops use